# ohspeed

./: .gitignore  .ocamlformat  README.md  dune-project  ohspeed.opam
.github/workflows/: ci.yml  release.yml
lib/: app.ml  app.mli  dune  history.ml  history.mli  measure.ml  measure.mli  model.ml  model.mli  ohspeed.ml  report.ml  report.mli  stats.ml  stats.mli  tui.ml  tui.mli  win32_console.c
scripts/: install.ps1  install.sh  package-release.ps1  package-release.sh
test/: dune  stats_test.ml
